ヘッダーにコメントで担当者名の追加

--- a/SSI_TEAM/src/main/resources/templates/employee_info_register.html
+++ b/SSI_TEAM/src/main/resources/templates/employee_info_register.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- 篠崎担当画面 -->
 <meta charset="UTF-8">
  <title>社員情報フォーム</title>
  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
