--- a/SSI_TEAM/src/main/resources/templates/employee_info_register.html
+++ b/SSI_TEAM/src/main/resources/templates/employee_info_register.html
@@ -37,7 +37,7 @@
     <input type="text" id="NYUSHA_DATE" name="NYUSHA_DATE" th:field="*{NYUSHA_DATE}"><br><br>
 
     <label for="AGE">年齢:</label>
-    <input type="number" id="AGE" name="AGE" th:field="*{AGE}"><br><br>
+    <input type="text" id="AGE" name="AGE" th:field="*{AGE}"><br><br>
 
     <label for="MAIL_ADDRESS">メールアドレス:</label>
     <input type="text" id="MAIL_ADDRESS" name="MAIL_ADDRESS" th:field="*{MAIL_ADDRESS}"><br><br>
