社員情報一覧画面の修正

--- a/SSI_TEAM/src/main/resources/templates/EMPLOYEE_INFO.html
+++ b/SSI_TEAM/src/main/resources/templates/EMPLOYEE_INFO.html
@@ -57,7 +57,7 @@
 	</div>
 </form> 
 <div class="display_flex">
-	<div><a th:href="@{/employee/add}" class="btn btn-primary"></a></div>
+	<div><a th:href="@{/employee/add}" class="btn btn-primary" value = "追加"></a></div>
 	<div><input class="button" type="button" value="削除"  onclick = "deleteInfo()" /></div>
 	<div><a href="#"><input class="button" type="submit" value="閉じる"  onclick="history.back();"/></a></div>
 	
