--- a/SSI_TEAM/src/main/resources/templates/EMPLOYEE_INFO.html
+++ b/SSI_TEAM/src/main/resources/templates/EMPLOYEE_INFO.html
@@ -18,7 +18,7 @@
 		<div class="width_33P">
 			<ul class="ulList_01">
 				<li><label>社員ID</label></li>
-				<li class="width_74P"><input type="text" name="employeeId" maxlength = "10" placeholder="社員IDを入力してください"  th:value="${employeeId}"></li>
+				<li class="width_74P"><input type="text" name="employeeId" maxlength = "10" placeholder="社員IDを入力してください"  th:value="${employee_id}"></li>
 			</ul>
 			<ul class="ulList_01">
 				<li><label>入社年月日</label></li>
@@ -33,9 +33,9 @@
             			<option value=""></option>
             			<option
                 			th:each="dept : ${deptList}"
-                			th:value="${dept.deptId}"
-                			th:text="${dept.deptName}"
-                			th:selected="${dept.deptId == selectedValue}">
+                			th:value="${dept.DEPT_ID}"
+                			th:text="${dept.DEPT_NAME}"
+                			th:selected="${dept.DEPT_ID == selectedValue}">
             			</option>
         			</select>
 				</li>
@@ -61,7 +61,7 @@
 	</div>
 </form> 
 <div class="display_flex">
-	<div><a th:href="@{/employee/add}" class="btn btn-primary" value = "追加"></a></div>
+	<div><a th:href="@{/employee/add}" class="btn btn-primary" value= "追加"></a></div>
 	<div><input class="button" type="button" id ="sakujo" value="削除"  onclick = "deleteInfo()" /></div>
 	<div><a href="#"><input class="button" type="submit" value="閉じる"  onclick="history.back();"/></a></div>
 	
