Serviceアノテーション忘れ修正、画面側誤字修正

--- a/SSI_TEAM/src/main/resources/templates/EMPLOYEE_INFO.html
+++ b/SSI_TEAM/src/main/resources/templates/EMPLOYEE_INFO.html
@@ -53,7 +53,7 @@
 			<ul class="ulList_01">
 				<li>&nbsp;</li>
 				<li class="display_flex padding_0">
-					<div><><input class="button" type="submit" value="検索" onclick="document.getElementById('hyo').style.visibility = 'visible';"/></div>
+					<div><input class="button" type="submit" value="検索" onclick="document.getElementById('hyo').style.visibility = 'visible';"/></div>
 				</li>
 				<!-- <li class="width_74P"><input class="width_100P" type="text" name="address" maxlength = "10"></li> -->
 			</ul>
