必須チェック削除、css反映

--- a/SSI_TEAM/src/main/resources/templates/EMPLOYEE_INFO.html
+++ b/SSI_TEAM/src/main/resources/templates/EMPLOYEE_INFO.html
@@ -4,7 +4,8 @@
 <head>
 <meta charset="UTF-8">
 <title>社員情報一覧</title>
- <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+ <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"></link>
+ <link href="/css/employee_info.css" rel="stylesheet"></link>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <style>
@@ -22,7 +23,7 @@
 			</ul>
 			<ul class="ulList_01">
 				<li><label>入社年月日</label></li>
-				<li class="width_74P"><input id="width_42P" type="text" name="nyushaDateS" th:value="${nyushaDateS}" maxlength = "20" placeholder="YYYY/MM/DD" required> ~ <input id="width_42P" type="text" name="nyushaDateE" th:value="${nyushaDateE}" maxlength = "20" placeholder="YYYY/MM/DD" required></li>
+				<li class="width_74P"><input id="width_42P" type="text" name="nyushaDateS" th:value="${nyushaDateS}" maxlength = "20" placeholder="YYYY/MM/DD"> ~ <input id="width_42P" type="text" name="nyushaDateE" th:value="${nyushaDateE}" maxlength = "20" placeholder="YYYY/MM/DD"></li>
 			</ul>
 		</div>
 		<div class="width_33P">
