--- a/SSI_TEAM/src/main/resources/templates/employee_info_register.html
+++ b/SSI_TEAM/src/main/resources/templates/employee_info_register.html
@@ -10,37 +10,56 @@
 </head>
 <body>
 <h1>社員情報 登録・更新</h1>
-<form th:object="${employee}" th:action="@{/save}" method="post">
-    <label for="EMPLOYEE_ID">社員ID:</label>
-    <input type="text" id="EMPLOYEE_ID" name="EMPLOYEE_ID" th:value="${employee.EMPLOYEE_ID}" readonly><br><br>
-
-    <label for="PASSWORD">パスワード:</label>
-    <input type="password" id="PASSWORD" name="PASSWORD" th:field="*{PASSWORD}"><br><br>
-
-    <label for="EMPLOYEE_NAME">社員名:</label>
-    <input type="text" id="EMPLOYEE_NAME" name="EMPLOYEE_NAME" th:field="*{EMPLOYEE_NAME}"><br><br>
-
-    <label for="DEPT_ID">所属:</label>
-    <input type="text" id="DEPT_ID" name="DEPT_ID" th:field="*{DEPT_ID}"><br><br>
-
-    <label for="SEX_ID">性別:</label>
-    <select id="SEX_ID" name="SEX_ID" th:field="*{SEX_ID}">
+<form th:object="${employeeDao}" th:action="@{/save}" method="post">
+    
+    
+    <label for="employeeId">社員ID:</label>
+    <input type="text" id="employeeId" name="employeeId" th:field="*{employeeId}"><br><br>
+    
+    <label for="password">パスワード:</label>
+    <input type="password" id="password" name="password" th:field="*{password}"><br><br>
+    
+    <label for="employeeName">社員名:</label>
+    <input type="text" id="employeeName" name="employeeName" th:field="*{employeeName}"><br><br>
+    
+    <label for="deptId">所属:</label>
+    <select id="deptId" name="deptId" th:field="*{deptId}">
+        <option th:each="dept : ${departments}" th:value="${dept.DEPT_ID}" th:text="${dept.DEPT_NAME}"></option>
+    </select>
+    <br><br>
+    
+    <label for="sexId">性別:</label>
+    <select id="sexId" name="sexId" th:field="*{sexId}">
         <option value="male">男性</option>
         <option value="female">女性</option>
         <option value="none">未確認</option>
     </select><br><br>
-
+    
+    <label for="age">年齢:</label>
+    <input type="number" id="age" name="age" th:field="*{age}"><br><br>
+    
+    <label for="telNo">電話番号:</label>
+    <input type="text" id="telNo" name="telNo" th:field="*{telNo}"><br><br>
+    
+    <label for="mailAddress">メールアドレス:</label>
+    <input type="text" id="mailAddress" name="mailAddress" th:field="*{mailAddress}"><br><br>
+    
     <!-- 他のフィールドも同様に修正 -->
-
+    
+    <label>部署名: </label>
+    <span th:text="${employeeDao.deptId}"></span>
+    <!-- 他の部署情報のプロパティも同様に表示 -->
+    
     <button type="submit" th:if="${isUpdate}">更新</button>
     <button type="submit" th:if="${not isUpdate}">登録</button>
     <button type="button" id="closeButton">閉じる</button>
 </form>
 
+
 <script>
     $(document).ready(function() {
         // 入社年月日のDatepickerを初期化
-        $("#NYUSHA_DATE").datepicker({
+        $("#nyushaDate").datepicker({
             dateFormat: "yy/mm/dd",  // 日付の表示形式
             changeMonth: true,      // 月の選択を表示
             changeYear: true,      // 年の選択を表示
