--- a/SSI_TEAM/src/main/resources/templates/EMPLOYEE_INFO.html
+++ b/SSI_TEAM/src/main/resources/templates/EMPLOYEE_INFO.html
@@ -9,7 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <style>
-	#sakujo { visibility:hidden } /* 非表示 */
+	 /* #sakujo { visibility:hidden }非表示 */
 	/*#hyo { visibility:hidden }  非表示 */
 </style>
 </head>
@@ -62,7 +62,7 @@
 	</div>
 </form> 
 <div class="display_flex">
-	<div><a th:href="@{/employee/add}" class="btn btn-primary" value= "追加"><input class="button" type="submit" value="追加"/></a></div>
+	<div><a th:href="@{/employees/form}" class="btn btn-primary" value= "追加"><input class="button" type="submit" value="追加"/></a></div>
 	<div><input class="button" type="button" id ="sakujo" value="削除"  onclick = "deleteInfo()" /></div>
 	<div><a href="#"><input class="button" type="submit" value="閉じる"  onclick="history.back();"/></a></div>
 	
