--- a/SSI_TEAM/src/main/resources/templates/EMPLOYEE_INFO.html
+++ b/SSI_TEAM/src/main/resources/templates/EMPLOYEE_INFO.html
@@ -61,7 +61,7 @@
 	</div>
 </form> 
 <div class="display_flex">
-	<div><a th:href="@{/employees/form}" class="btn btn-primary" value= "追加"><input class="button" type="submit" value="追加"/></a></div>
+	<div><a th:href="@{/form}" class="btn btn-primary" value= "追加"><input class="button" type="submit" value="追加"/></a></div>
 	<div><input class="button" type="button" id ="sakujo" value="削除"  onclick = "deleteInfo()" /></div>
 	<div><a href="#"><input class="button" type="submit" value="閉じる"  onclick="history.back();"/></a></div>
 	
